fix: enhanced stories. do not use visibility, use a strongest css rule with display none

--- a/src/components/z-popover/styles.css
+++ b/src/components/z-popover/styles.css
@@ -5,8 +5,7 @@
   --z-popover-shadow-filter: drop-shadow(0 1px 2px var(--shadow-color-base));
 
   position: relative;
-  display: flex;
-  visibility: visible;
+  display: none;
   align-items: center;
   justify-content: center;
   padding: var(--z-popover-padding);
@@ -21,9 +20,9 @@
   filter: var(--z-popover-shadow-filter);
 }
 
-:host(:not([open])),
-:host([open="false"]) {
-  visibility: hidden !important;
+:host([open][current-position]),
+:host([open="true"][current-position]) {
+  display: flex;
 }
 
 :host([center][current-position="top"]),
